remove android specific classes and use http client in BaseRequest